--- a/ParticleSimulator1.ipynb
+++ b/ParticleSimulator1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYWdQ6JMdVEVm6Q1/F/tYU",
+      "authorship_tag": "ABX9TyPgY8jYstOwqK59243vZagq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {
+        "id": "FKwi76SwJFbX",
+        "outputId": "3ca733e0-fd6d-4126-faaa-f6cddbf85f59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🔵 ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🟢 · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🟡\n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
+            "зеленый: x = 4, y = 17, vx = -1, vy = -1 синий: x = 2, y = 12, vx = 1, vy = 1\n",
+            "зеленый: x = 4, y = 17, vx = -1, vy = -1 желтый: x = 6, y = 18, vx = 0, vy = -1\n",
+            "синий: x = 2, y = 12, vx = 1, vy = 1 желтый: x = 6, y = 18, vx = 0, vy = -1\n",
+            "Остановка\n"
+          ]
+        }
+      ],
       "source": [
         "import time\n",
         "from IPython.display import clear_output\n",
@@ -111,34 +141,190 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "import numpy as np\n",
+        "from IPython.display import clear_output\n",
+        "from scipy.spatial import KDTree\n",
+        "import random\n",
+        "\n",
+        "class Particle:\n",
+        "    def __init__(self, x, y, vx, vy, color):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "        self.vx = vx\n",
+        "        self.vy = vy\n",
+        "        self.color = color\n",
+        "\n",
+        "    def move(self):\n",
+        "        self.x += self.vx\n",
+        "        self.y += self.vy\n",
+        "\n",
+        "class Simulator:\n",
+        "    def __init__(self, width, height):\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "        self.particles = []\n",
+        "        self.collision_radius = 1.5\n",
+        "\n",
+        "    def add_particle(self, particle):\n",
+        "        self.particles.append(particle)\n",
+        "\n",
+        "    def create_rectangle(self, start_x, start_y, width, height, speed_range, color, density=1.0):\n",
+        "        particles = []\n",
+        "\n",
+        "        for x in range(start_x, start_x + width):\n",
+        "            for y in range(start_y, start_y + height):\n",
+        "                if random.random() <= density:\n",
+        "                    vx = random.uniform(speed_range[0], speed_range[1])\n",
+        "                    vy = random.uniform(speed_range[0], speed_range[1])\n",
+        "                    particles.append(Particle(x, y, vx, vy, color))\n",
+        "\n",
+        "        return particles\n",
+        "\n",
+        "\n",
+        "    def kdtree_collisions(self):\n",
+        "        positions = np.array([[p.x, p.y] for p in self.particles])\n",
+        "        tree = KDTree(positions)\n",
+        "        collision_pairs = tree.query_pairs(self.collision_radius)\n",
+        "\n",
+        "        for i, j in collision_pairs:\n",
+        "            p1, p2 = self.particles[i], self.particles[j]\n",
+        "            distance = np.sqrt((p1.x - p2.x)**2 + (p1.y - p2.y)**2)\n",
+        "            if distance <= 1.0:\n",
+        "                p1.vx, p2.vx = p2.vx, p1.vx\n",
+        "                p1.vy, p2.vy = p2.vy, p1.vy\n",
+        "\n",
+        "    def simulate_step(self):\n",
+        "        for p in self.particles:\n",
+        "            p.move()\n",
+        "\n",
+        "        self.kdtree_collisions()\n",
+        "\n",
+        "def print_matrix(simulator):\n",
+        "    color_symbols = {\n",
+        "        'красный': '🔴',\n",
+        "        'синий': '🔵'\n",
+        "    }\n",
+        "\n",
+        "    matrix = [['· ' for _ in range(simulator.width)] for _ in range(simulator.height)]\n",
+        "\n",
+        "    for p in simulator.particles:\n",
+        "        x, y = int(round(p.x)), int(round(p.y))\n",
+        "        if 0 <= x < simulator.width and 0 <= y < simulator.height:\n",
+        "            symbol = color_symbols.get(p.color)\n",
+        "            matrix[y][x] = symbol\n",
+        "\n",
+        "    for row in matrix:\n",
+        "        print(''.join(row))\n",
+        "\n",
+        "def main():\n",
+        "    width, height = 50, 50\n",
+        "\n",
+        "    sim = Simulator(width, height)\n",
+        "\n",
+        "\n",
+        "    body_rect = sim.create_rectangle(\n",
+        "        start_x=20, start_y=20,\n",
+        "        width=10, height=10,\n",
+        "        speed_range=(-0.01, 0.01),\n",
+        "        color='синий',\n",
+        "        density=1\n",
+        "    )\n",
+        "\n",
+        "    fire_rect = sim.create_rectangle(\n",
+        "        start_x=0, start_y=30,\n",
+        "        width=50, height=50,\n",
+        "        speed_range=(-0.5, 0.5),\n",
+        "        color='красный',\n",
+        "        density=0.8\n",
+        "    )\n",
+        "\n",
+        "    for particle in fire_rect + body_rect:\n",
+        "        sim.add_particle(particle)\n",
+        "\n",
+        "    try:\n",
+        "        for _ in range(1000):\n",
+        "            clear_output(wait=True)\n",
+        "            print_matrix(sim)\n",
+        "            sim.simulate_step()\n",
+        "            time.sleep(0.1)\n",
+        "\n",
+        "    except KeyboardInterrupt:\n",
+        "        print('\\nСимуляция остановлена')\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "KdMUPorOJ9oc",
-        "outputId": "15d60c65-dde8-469d-b004-9251d04a97ca"
+        "id": "44jfaPHVZShT",
+        "outputId": "c7bea521-ee7a-4099-c104-305262e321d4"
       },
-      "execution_count": 126,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🟢\n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🟡 ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  🔵 · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  ·  · \n",
-            "зеленый: x = 1, y = 18, vx = 1, vy = -1 синий: x = 5, y = 19, vx = 0, vy = -1\n",
-            "зеленый: x = 1, y = 18, vx = 1, vy = -1 желтый: x = 4, y = 11, vx = 1, vy = 1\n",
-            "синий: x = 5, y = 19, vx = 0, vy = -1 желтый: x = 4, y = 11, vx = 1, vy = 1\n",
-            "Остановка\n"
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · 🔵· · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · 🔵· · · · 🔵· · · 🔵🔵· · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · 🔵· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · 🔵🔵· · · · 🔵· · · · · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · · · · · · · 🔵🔵· · · · · 🔵🔵🔵🔵· · 🔵· · · · · · · · · · · · · · · · · · · \n",
+            "· · · · · · · · · · · 🔴· · · · · 🔵· · · 🔵🔵🔵· 🔵🔵· · 🔵🔵· · · · · · · · · · · · · · · · · 🔴· \n",
+            "· · · · · · · · · · · · · · · · · · · 🔵· 🔵· 🔵· 🔵🔵🔵· · 🔵· · · · 🔴· · · · · · · · · · 🔴· · · \n",
+            "· · · · · · · · · · · · · · · · · · · · · 🔵· · 🔵· · · 🔵· · · 🔴· · · 🔴· 🔴· · · · · 🔴· · · · · \n",
+            "· · · · · · · · · · · 🔴🔴🔴🔴· · · 🔴🔵· · 🔵🔵🔵🔵🔵🔵· · · · · · · · · · · 🔴· · · 🔴· · · · 🔴· \n",
+            "· 🔴· 🔴· · · 🔴· · · · · · 🔴· · · · 🔴🔵🔵· 🔵· 🔵🔵🔵🔵🔵🔵· · · · · · · 🔴🔴· · · · · · · · · · \n",
+            "· · 🔴· · · · · · · · · 🔴· 🔴· · 🔴· · 🔴· 🔵🔵🔵🔵🔵🔵🔵🔵· · 🔴🔴· · · · · · · · · · · · 🔴· · · \n",
+            "· · · · · · · · · · 🔴· · 🔴· 🔴· · · · 🔵· 🔵🔵🔵🔵🔵🔵· 🔵🔴· · · · · · · · · · · · 🔴🔴· · · · · \n",
+            "· · · · · · · · · · · · · · · · · 🔴· 🔵🔴· 🔵🔵🔵🔴🔵🔵🔵· · · · · · · · 🔴· · 🔴· · · 🔴🔴· · · · \n",
+            "· 🔴· 🔴· · 🔴· · 🔴🔴· · · · · 🔴🔴· 🔴🔴🔴🔴🔵🔵· 🔴· · 🔵· · 🔴· · · · · · 🔴🔴· · 🔴· · · · · · \n",
+            "· · · · 🔴· 🔴· 🔴🔴· · · 🔴🔴· 🔴· 🔴· 🔴🔴🔴🔴· 🔴🔴🔴· · · · · 🔴· · · 🔴🔴🔴· · 🔴· · · · · · 🔴\n",
+            "🔴· · · · · · · · · · · · · · · · · 🔴🔴· · 🔴· · 🔴· · 🔴🔴🔴🔴· 🔴· · · · · · 🔴🔴🔴· · · · · · 🔴\n",
+            "· · · · · 🔴· 🔴🔴🔴🔴· · · · · · · 🔴· · 🔴· · 🔴· · · 🔴🔴🔴🔴🔴🔴· · 🔴· 🔴· · · 🔴· · · · 🔴🔴· \n",
+            "· · · · · · · · · · · 🔴· · · · · · · 🔴🔴· 🔴🔴· 🔴🔴🔴🔴🔴🔴· · · · 🔴· 🔴· · · 🔴· · · · 🔴· 🔴· \n",
+            "· · · · 🔴🔴· · · 🔴🔴· 🔴· 🔴· 🔴🔴· · 🔴· 🔴🔴🔴🔴🔴· · 🔴· · · · · · · · 🔴🔴🔴· 🔴· 🔴· 🔴🔴· · \n",
+            "· · 🔴🔴· · · 🔴· · 🔴🔴🔴· 🔴· · 🔴🔴🔴🔴· · · 🔴🔴🔴🔴· 🔴· · 🔴🔴🔴· 🔴· · 🔴🔴🔴· · 🔴· · · 🔴· \n",
+            "· 🔴🔴· · · · · · 🔴· · · · · · 🔴🔴· · · 🔴🔴🔴· 🔴· 🔴🔴· 🔴🔴🔴· · · · · · · 🔴🔴🔴· · · · · · 🔴\n",
+            "· · · · 🔴🔴· · · · · 🔴· · 🔴· · 🔴🔴· 🔴🔴· · · · · 🔴· 🔴🔴🔴🔴· 🔴· 🔴🔴· · 🔴· · · · 🔴· 🔴· 🔴\n",
+            "🔴· · · 🔴· 🔴· · · 🔴· · 🔴🔴🔴· 🔴🔴· 🔴🔴· · · 🔴· 🔴· 🔴· · 🔴· 🔴🔴🔴· · · · · 🔴🔴· · 🔴🔴🔴🔴\n",
+            "🔴· · · · · 🔴· 🔴· · · · · · · · · 🔴🔴🔴· 🔴· · 🔴· · · 🔴· 🔴· · · 🔴🔴· · 🔴🔴🔴· · 🔴🔴· · 🔴· \n",
+            "· · · 🔴· · 🔴🔴· · 🔴· · 🔴🔴🔴· 🔴🔴🔴🔴🔴🔴· · 🔴· 🔴· 🔴· 🔴🔴· · 🔴🔴🔴· · 🔴🔴· 🔴🔴· · · · · \n",
+            "· · 🔴· · 🔴· · · 🔴🔴🔴🔴· · 🔴🔴· · 🔴· · · 🔴· · · 🔴· 🔴🔴🔴🔴· · 🔴🔴🔴· 🔴🔴🔴🔴· 🔴🔴· 🔴· 🔴\n",
+            "🔴· · 🔴🔴· 🔴· 🔴· 🔴🔴· · 🔴🔴🔴🔴· 🔴🔴🔴🔴🔴· 🔴🔴· 🔴· 🔴· 🔴🔴🔴🔴· 🔴🔴· · · 🔴· · · · 🔴· · \n",
+            "· 🔴🔴🔴🔴🔴🔴🔴· 🔴🔴· · · 🔴· 🔴🔴🔴🔴🔴· · 🔴🔴🔴· · 🔴· 🔴· 🔴· 🔴🔴🔴· · 🔴🔴🔴· · · · · 🔴· · \n",
+            "· · 🔴🔴🔴· 🔴· · · 🔴🔴🔴· · 🔴🔴🔴· · · · 🔴🔴🔴· · · 🔴· 🔴🔴🔴🔴· · 🔴🔴· · · · 🔴🔴· · 🔴· · · \n",
+            "· 🔴· · · 🔴🔴🔴· · · 🔴🔴🔴· · 🔴🔴🔴· 🔴🔴🔴· 🔴· · · · 🔴· · 🔴· 🔴· · · · 🔴· · · · 🔴🔴🔴🔴🔴· \n",
+            "· · · 🔴· · · · · · · · 🔴🔴· · 🔴🔴🔴· 🔴· 🔴🔴· 🔴· · 🔴· · 🔴🔴🔴· · · 🔴🔴🔴· · 🔴· · 🔴· 🔴🔴· \n",
+            "🔴· · · · 🔴· · · · · 🔴· · 🔴🔴· · · 🔴🔴· · · 🔴· 🔴🔴🔴· · 🔴· · · 🔴🔴🔴🔴· 🔴🔴· 🔴· · 🔴· · · \n",
+            "🔴🔴🔴· 🔴🔴🔴🔴🔴🔴· 🔴· 🔴🔴· 🔴· · · 🔴· 🔴🔴· · 🔴🔴🔴· · · · 🔴· · 🔴· · · · 🔴· 🔴🔴· · 🔴· · \n",
+            "· · · · 🔴🔴· · · 🔴· 🔴· · 🔴🔴· · · · · 🔴· 🔴· 🔴🔴· 🔴· · · · 🔴🔴🔴· 🔴· 🔴· · 🔴· 🔴· · 🔴🔴🔴\n",
+            "· 🔴· 🔴🔴· · · · 🔴🔴🔴🔴· 🔴· 🔴· · 🔴· · 🔴🔴🔴🔴· · 🔴🔴🔴· 🔴· 🔴🔴· · 🔴· · · · 🔴🔴🔴· · · · \n",
+            "\n",
+            "Симуляция остановлена\n"
           ]
         }
       ]
