--- a/simulate_collisions.ipynb
+++ b/simulate_collisions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNEUerLbXoRO4MiVeZaMh7J",
+      "authorship_tag": "ABX9TyO8bbAvOEVBCkH4iEHnHrxT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,17 +44,35 @@
         "    try:\n",
         "        collisions = 0\n",
         "\n",
-        "        for frame in tqdm(range(f), desc=\"Кадры\"):\n",
-        "            p = torch.randint(0, s, (n, 2), device=device)\n",
-        "            v = torch.randint(-1, 2, (n, 2), device=device)\n",
+        "        torch.manual_seed(42)\n",
+        "        p = torch.randint(0, s, (n, 2), device=device)\n",
+        "        v = torch.randint(-1, 2, (n, 2), device=device)\n",
         "\n",
+        "        active_mask = torch.ones(n, dtype=torch.bool, device=device)\n",
+        "\n",
+        "        for frame in tqdm(range(f), desc=\"Кадры\"):\n",
         "            with torch.no_grad():\n",
-        "                pos = (p + frame * v).clamp(0, s-1)\n",
-        "                keys = pos[:, 0].long() * (s + 1) + pos[:, 1].long()\n",
+        "                p[active_mask] += v[active_mask]\n",
+        "\n",
+        "                out_of_bounds_mask = (p[:, 0] < 0) | (p[:, 0] >= s) | (p[:, 1] < 0) | (p[:, 1] >= s)\n",
+        "\n",
+        "                active_mask = active_mask & ~out_of_bounds_mask\n",
+        "\n",
+        "                if not active_mask.any():\n",
+        "                    print(f\"Все частицы пропали на кадре {frame}\")\n",
+        "                    break\n",
+        "\n",
+        "                pos = p[active_mask]\n",
+        "\n",
+        "                pos_clamped = pos.clamp(0, s-1)\n",
+        "\n",
+        "                keys = pos_clamped[:, 0].long() * s + pos_clamped[:, 1].long()\n",
         "                unique, counts = torch.unique(keys, return_counts=True)\n",
         "                collisions += (counts * (counts - 1) // 2).sum().item()\n",
         "\n",
+        "        active_particles = active_mask.sum().item()\n",
         "        print(f\"\\nЧастиц: {n:,}, Кадров: {f}, Коллизии: {collisions:,}\")\n",
+        "        print(f\"Осталось активных частиц: {active_particles:,}\")\n",
         "\n",
         "    except Exception as e:\n",
         "        print(f\"Ошибка: {e}\")\n",
@@ -70,10 +88,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "vOV8hzUzmm31",
-        "outputId": "4fa905ba-ac54-4150-a083-61e685c5c863"
+        "id": "cQme_T3-u2FS",
+        "outputId": "a861df70-fcdc-4a08-b716-5b0af30de2a2"
       },
-      "execution_count": 22,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +104,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Кадры: 100%|██████████| 2/2 [00:00<00:00, 543.80it/s]"
+            "Кадры: 100%|██████████| 2/2 [00:00<00:00, 288.18it/s]"
           ]
         },
         {
@@ -94,8 +112,8 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Частиц: 50, Кадров: 2, Коллизии: 19\n",
-            "Память очищена\n"
+            "Частиц: 50, Кадров: 2, Коллизии: 20\n",
+            "Осталось активных частиц: 41\n"
           ]
         },
         {
@@ -103,6 +121,13 @@
           "name": "stderr",
           "text": [
             "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Память очищена\n"
           ]
         }
       ]
